syntax = "proto3";

option csharp_namespace = "ScooterRentApp.Software.Server";

package greet;

service ScooterGRPCService {
	rpc AddScooter(MacRequest) returns (ScooterResponse);
	rpc ChangeRentalTime(RentalTimeRequest) returns (ScooterResponse);
	rpc ChangeBatteryLevel(BatteryLevelRequest) returns (ScooterResponse);
	rpc ChangeSpeed(SpeedRequest) returns (ScooterResponse);
	rpc ChangePosition(PositionRequest) returns (ScooterResponse);
}

message ScooterResponse{
	  string LastId = 1;
}

message MacRequest {
	bytes Mac = 1;
}

message RentalTimeRequest {
	bytes Mac = 1;
    uint32 RentalTime = 2;
}

message BatteryLevelRequest {
	bytes Mac = 1;
    fixed32 BatteryLevel = 2;
}

message SpeedRequest {
	bytes Mac = 1;
    int32 Speed = 2;
}

message PositionRequest {
	bytes Mac = 1;
    double Latitude = 2;
	double Longitude = 3;
}